--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,328 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="shortcut icon" href="./images/icons/favicon.svg">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <div class="top-back">
+      <div class="top-back__wrapper">
+        <div class="top-back__empty"></div>
+        <div class="top-back__photo"></div>
+      </div>
+
+      <div class="top-back__header">
+        <header class="header">
+          <div class="container header__container">
+            <div class="header__top-bar top-bar">
+              <a class="top-bar__link" href="#menu">
+                <img
+                  class="top-bar__icon-menu"
+                  src="./images/icons/menu.svg"
+                  alt="menu"
+                >
+              </a>
+              <a class="top-bar__logo logo" href="#">
+                NA <br>
+                MU
+              </a>
+            </div>
+
+            <div class="header__title">
+              <h1 class="title title--main">ХУДОЖНІЙ МУЗЕЙ</h1>
+            </div>
+
+            <a href="#events" class="header__tickets">
+              <div class="tickets">
+                <h3 class="tickets__title">КВИТКИ</h3>
+                <button class="tickets__btn">
+                  <img src="./images/icons/arrow.svg" alt="arrow">
+                </button>
+              </div>
+            </a>
+
+            <div class="header__events">
+              <div class="header__line"></div>
+              <a class="header__link" href="#events">ПОДІЇ</a>
+            </div>
+          </div>
+        </header>
+      </div>
+    </div>
+
+    <aside class="menu" id="menu">
+      <div class="container">
+        <div class="menu__wrapper">
+          <a class="menu__close" href="#">
+            <img src="./images/icons/menu-close.svg" alt="menu-close">
+          </a>
+
+          <nav class="nav menu__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#gallery">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#subscription">Про Нас</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#events">Виставки та події</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#contacts">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="menu__div"></div>
+
+          <div class="menu__schedule schedule">
+            <p class="schedule__title">Графік роботи</p>
+            <div class="schedule__content">
+              <p class="schedule__days">
+                <span>12:00 — 20:00</span> середа <br>
+                <span>12:00 — 20:00</span> четвер <br>
+                <span>12:00 — 20:00</span> п’ятниця <br>
+                <span>11:00 — 19:00</span> субота <br>
+                <span>11:00 — 19:00</span> неділя
+              </p>
+              <p class="schedule__info"> <span>Вихідні:</span> понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="menu__overlay"></div>
+    </aside>
+
+    <main class="main">
+      <section class="events" id="events">
+        <div class="container">
+          <h2 class="title events__title">Актуальні події</h2>
+
+
+          <div class="events__wrapper">
+            <div class="events__item">
+              <img
+                class="events__photo"
+                src="./images/event-1.jpg"
+                alt="event-1"
+              >
+              <div class="events__content">
+                <div class="events__dates">
+                  <p class="events__name">ВИСТАВКА</p>
+                  <p class="events__date">26.08-29.11.2019</p>
+                </div>
+                <div class="events__subtitle">
+                  <h3 class="title title--subtitle">Йду і повертаюсь</h3>
+                  <div class="events__square"></div>
+                </div>
+                <p class="events__descr">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+
+            <div class="events__item">
+              <img
+                class="events__photo"
+                src="./images/event-2.jpg"
+                alt="event-1"
+              >
+              <div class="events__content">
+                <div class="events__dates">
+                  <p class="events__name">ВИСТАВКА</p>
+                  <p class="events__date">26.08-29.11.2019</p>
+                </div>
+                <div class="events__subtitle">
+                  <h3 class="title title--subtitle">І спогади і мрії</h3>
+                  <div class="events__square"></div>
+                </div>
+                <p class="events__descr">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="lections" id="lections">
+        <div class="container">
+          <div class="lections__wrapper">
+            <div class="lections__content">
+              <div class="lections__dates">
+                <p class="lections__name">ЛЕКЦІЯ</p>
+                <p class="lections__date">26/08/2019 - 11:00</p>
+              </div>
+              <h3 class="title title--subtitle">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="title gallery__title">Галерея</h2>
+          <div class="gallery__wrapper">
+            <img
+              class="gallery__photo gallery__photo--thin"
+              src="./images/gallery-1.jpg"
+              alt="photo1"
+            >
+            <img
+              class="gallery__photo gallery__photo--wide"
+              src="./images/gallery-2.jpg"
+              alt="photo2"
+            >
+            <img
+              class="gallery__photo gallery__photo--wide"
+              src="./images/gallery-3.jpg"
+              alt="photo3"
+            >
+            <img
+              class="gallery__photo gallery__photo--thin"
+              src="./images/gallery-4.jpg"
+              alt="photo4"
+            >
+          </div>
+          <div class="gallery__dots">
+            <div class="gallery__dot active"></div>
+            <div class="gallery__dot"></div>
+            <div class="gallery__dot"></div>
+            <div class="gallery__dot"></div>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <div class="container">
+          <h3 class="title subscription__title">Підписка</h3>
+          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+          <form class="form subscription__form" onsubmit="this.reset(); return false;">
+            <input
+              class="form__input"
+              type="email"
+              placeholder="E-mail"
+              required
+            >
+            <button class="form__btn">
+              <img
+                class="form__arrow"
+                src="./images/icons/arrow-black.svg"
+                alt="submit"
+              >
+            </button>
+          </form>
+        </div>
+
+
+      </section>
+    </main>
+
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__main">
+            <a class="logo logo--footer" href="#">
+              NA <br>
+              MU
+            </a>
+
+            <div class="social">
+              <a
+                class="social__fb"
+                href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                target="_blank"
+              >
+                <img
+                  class="social__img"
+                  src="./images/icons/facebook.svg"
+                  alt="facebook"
+                >
+              </a>
+              <a
+                class="social__ig"
+                href="https://www.instagram.com/namu.museum/"
+                target="_blank"
+              >
+                <img
+                  class="social__img"
+                  src="./images/icons/instagram.svg"
+                  alt="instagram"
+                >
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__schedule schedule">
+            <p class="schedule__title">Графік роботи</p>
+            <div class="schedule__content schedule__content--footer">
+              <p class="schedule__days">
+                <span>12:00 — 20:00</span> середа <br>
+                <span>12:00 — 20:00</span> четвер <br>
+                <span>12:00 — 20:00</span> п’ятниця <br>
+                <span>11:00 — 19:00</span> субота <br>
+                <span>11:00 — 19:00</span> неділя
+              </p>
+              <p class="schedule__info"> <span>Вихідні:</span> понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+          </div>
+
+          <div class="footer__contacts contacts" id="contacts">
+            <p class="contacts__title">Контакти:</p>
+            <p class="contacts__content">
+              вул. М. Грушевського, 6; <br>
+              Київ, 01001 <br>
+              тел. +38 (044) 278-13-57 <br>
+              факс +38 (044) 278-74-54 <br>
+              e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+
+          <a href="#" class="footer__arrow-up">
+            <img
+              class="footer__img"
+              src="./images/icons/arrow-up.svg"
+              alt="up"
+            >
+          </a>
+
+          <div class="footer__div"></div>
+
+          <nav class="nav footer__nav">
+            <ul class="nav__list nav__list--footer">
+              <li class="nav__item">
+                <a class="nav__link nav__link--footer" href="#gallery">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link nav__link--footer" href="#subscription">Про Нас</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link nav__link--footer" href="#events">Виставки та події</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link nav__link--footer" href="#footer">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer__copy">
+          <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
+          <p class="footer__text">Designed by Zhyriada Marina</p>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
