--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,336 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="favicon" href="images/NAMU.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page">
+    <header class="header">
+      <div class="header__content">
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ </h1>
+
+        <a href="#menu" class="icon icon--menu"></a>
+        <div class="header__image">
+          <a href="#" class="header__logo">
+            <img src="images/NAMU.svg" alt="logo">
+          </a>
+        </div>
+
+        <div class="button">
+          <button href="#" class="button__click">
+            <div class="button__icon"></div>
+          </button>
+          <p class="button__text">КВИТКИ</p>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu page_menu" id="menu">
+      <div class="menu__icon">
+        <a href="#" class="icon icon--close"></a>
+      </div>
+      <div class="menu__links">
+        <div class="menu__links__position">
+          <a href="#" class="menu__text">Галерея</a>
+          <br>
+          <a href="#events" class="menu__text">Виставки та <br> події</a>
+        </div>
+        <div class="menu__links__position menu__links__position--second">
+          <a href="#subscribe" class="menu__text">Про нас</a>
+          <br>
+          <a href="#contacts" class="menu__text">Контакти</a>
+        </div>
+      </div>
+
+      <div class="menu__rectangle"></div>
+
+      <div class="schedule">
+        <p class="schedule__text">Графік роботи</p>
+
+        <ul class="schedule__days">
+          <li class="schedule__text--time">
+            12:00 — 20:00
+            <h4 class="schedule__text--inline">середа</h4>
+          </li>
+
+          <li class="schedule__text--time">
+            12:00 — 20:00
+            <p class="schedule__text--inline">четвер</p>
+          </li>
+
+          <li class="schedule__text--time">
+            12:00 — 20:00
+            <p class="schedule__text--inline">п’ятниця</p>
+          </li>
+
+          <li class="schedule__text--time">
+            11:00 — 19:00
+            <p class="schedule__text--inline">субота</p>
+          </li>
+
+          <li class="schedule__text--time">
+            11:00 — 19:00
+            <p class="schedule__text--inline">неділя</p>
+          </li>
+        </ul>
+
+        <div class="schedule__weekends">
+          <h3 class="schedule__weekends--time">
+            Вихідні:
+            <p class="schedule__weekends--inline">понеділок, вівторок Каса припиняє
+              роботу за 1 годину до закриття музею
+            </p>
+          </h3>
+        </div>
+
+      </div>
+    </aside>
+
+    <main class="main">
+
+      <section class="events" id="events">
+        <h2 class="events-title">Актуальні події</h2>
+
+        <img
+          src="images/exhibition-first.png"
+          alt="exhibition-image"
+          class="events__images"
+          >
+        <article class="exhibition">
+          <p class="exhibition__name">ВИСТАВКА<span class="exhibition__time">26.08-29.11.2019</span></p>
+          <h3 class="exhibition__title">
+            Йду і повертаюсь
+            <span class="exhibition__block"></span>
+          </h3>
+          <p class="exhibition__text">Національний Художній Музей України презентує унікальну частину
+            колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+          </p>
+        </article>
+
+        <img
+          src="images/exhibition-second.png"
+          alt="exhibition-image"
+          class="events__images events__images--second"
+          >
+
+        <article class="exhibition exhibition--second">
+
+          <p class="exhibition__name">ВИСТАВКА<span class="exhibition__time">26.08-29.11.2019</span></p>
+          <h3 class="exhibition__title">
+            І спогади і мрії
+            <span class="exhibition__block"></span>
+          </h3>
+          <p class="exhibition__text">Національний художній музей України до 100 річчя від дня народження   видатної української
+            художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </p>
+        </article>
+      </section>
+
+      <section class="landscape__exhibition" id="landscape__exhibition">
+        <article class="landscape">
+          <img
+          src="images/gallery_background.png"
+          alt="landscape__image"
+          class="landscape__image"
+          >
+          <div class="landscape__content">
+            <p class="landscape__content__name">ЛЕКЦІЯ<span class="landscape__content__time">26/08/2019 - 11:00</span></p>
+            <h3 class="landscape__content__title">Від класицизму до романтизму</h3>
+          </div>
+        </article>
+      </section>
+
+      <section class="gallery" id="galery">
+        <h2 class="gallery-title">Галерея</h2>
+
+        <div class="gallery__slider">
+
+          <div class="gallery-slide">
+            <img
+            class="gallery__image gallery__image--first"
+            src="images/gallery__first.png"
+            alt="gallery__first">
+          </div>
+
+          <div class="gallery-slide">
+            <img
+            class="gallery__image gallery__image--second"
+            src="images/gallery__second.png"
+            alt="gallery__second">
+          </div>
+
+          <div class="gallery-slide">
+            <img
+            class="gallery__image"
+            src="images/gallery__third.png"
+            alt="gallery__third">
+          </div>
+
+          <div class="gallery-slide">
+            <img
+            class="gallery__image"
+            src="images/gallery__fourth.png"
+            alt="gallery__fourth">
+          </div>
+
+          <div class="gallery-slide">
+            <img
+            class="gallery__image"
+            src="images/gallery__fifth.png"
+            alt="gallery__fourth">
+          </div>
+        </div>
+
+        <div>
+          <img
+          class="gallery__image__fordesktop gallery__image__fordesktop--third"
+          src="images/gallery__third.png"
+          alt="gallery__third">
+        </div>
+
+        <div>
+          <img
+          class="gallery__image__fordesktop gallery__image__fordesktop--fourth"
+          src="images/gallery__fourth.png"
+          alt="gallery__fourth">
+        </div>
+        <br>
+
+        <div class="gallery__dot-wrapper">
+          <span class="gallery__dot" onclick="currentSlide(1)"></span>
+          <span class="gallery__dot" onclick="currentSlide(2)"></span>
+          <span class="gallery__dot" onclick="currentSlide(3)"></span>
+          <span class="gallery__dot" onclick="currentSlide(4)"></span>
+        </div>
+
+      </section>
+
+      <section class="subscribe" id="subscribe">
+        <div class="subscribe__background">
+          <div class="subscribe__content">
+            <h3 class="subscribe__title">Підписка</h3>
+            <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          </div>
+
+          <div class="subscribe__email">
+            <form
+            onsubmit="this.reset(); return false;"
+            class="subscribe__email__form">
+              <input
+              class="subscribe__email__form__email"
+              type="email"
+              name="name"
+              placeholder="Email"
+              target="_blank"
+              method="get"
+              >
+              <button href="#" class="subscribe__email__button">
+                <img
+                src="images/vectorforemail.svg"
+                alt="vactor"
+                class="subscribe__email__button__vector"
+                >
+              </button>
+            </form>
+          </div>
+        </div>
+
+
+      </section>
+
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="footer__images">
+        <img
+        src="images/NAMU.svg"
+        alt="logo"
+        class="footer__logo"
+        >
+        <div class="footer__icons-wrapper">
+          <div class="footer__facebook footer__icons"></div>
+          <div class="footer__instagram footer__icons"></div>
+        </div>
+      </div>
+
+      <div class="footer-schedule">
+        <p class="footer-schedule__text">Графік роботи</p>
+
+        <div class="footer-schedule-wrapper">
+          <ul class="footer-schedule__days">
+            <li class="footer-schedule__text--time">
+              12:00 — 20:00
+              <p class="footer-schedule__text--inline">середа</p>
+            </li>
+
+            <li class="footer-schedule__text--time">
+              12:00 — 20:00
+              <p class="footer-schedule__text--inline">четвер</p>
+            </li>
+
+            <li class="footer-schedule__text--time">
+              12:00 — 20:00
+              <p class="footer-schedule__text--inline">п’ятниця</p>
+            </li>
+
+            <li class="footer-schedule__text--time">
+              11:00 — 19:00
+              <p class="footer-schedule__text--inline">субота</p>
+            </li>
+
+            <li class="footer-schedule__text--time">
+              11:00 — 19:00
+              <p class="footer-schedule__text--inline">неділя</p>
+            </li>
+          </ul>
+          <p class="footer-schedule__weekends--inline">Вихідні: понеділок, вівторок Каса припиняє
+            роботу за 1 годину до закриття музею
+          </p>
+        </div>
+      </div>
+
+      <div class="footer__contacts">
+        <p class="footer__contacts__text">Контакти:</p>
+        <p class="footer__contacts__streets">
+          вул. М. Грушевського, 6;
+          Київ, 01001 <br>
+          тел. <a href="tel:+38 (044), 278-13-57" class="contacts__phone">+38 (044), 278-13-57</a> <br>
+          факс <a href="tel:+38 (044) 278-74-54" class="contacts__phone">+38 (044) 278-74-54</a>
+          <br>
+          e-mail: <a href="mailto:info@namu.kiev.ua?subject=Mail from Our Site" class="contacts__email">info@namu.kiev.ua</a>i
+        </p>
+      </div>
+
+      <a href="#" class="footer__button">
+        <img
+        src="images/footer__button.svg"
+        alt="footer__button"
+        class="footer__button__image"
+        >
+      </a>
+
+      <div class="footer__brench"></div>
+
+      <div class="footer__links">
+        <div class="footer__links__position">
+          <a href="#" class="footer__links__text">Галерея</a>
+          <br>
+          <a href="#events" class="footer__links__text">Виставки та <br> події</a>
+        </div>
+        <div class="footer__links__position footer__links__position--second">
+          <a href="#subscribe" class="footer__links__text">Про нас</a>
+          <br>
+          <a href="#contacts" class="footer__links__text">Контакти</a>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
