--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/style.scss">
 
     <script src="main.js"></script>
@@ -230,6 +231,53 @@
           <h2 class="gallery__title">
             Галерея
           </h2>
+
+          <div class="gallery__swiper swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <img
+                      src="./images/gellery/gellery-img-1.png"
+                      alt="Наречена. Федір Кричевський"
+                      class="slideshow__picture"
+                    >
+              </div>
+              <div class="swiper-slide">
+                <img
+                      src="./images/gellery/gellery-img-2.png"
+                      alt="Наречена. Федір Кричевський"
+                      class="slideshow__picture"
+                    >
+              </div>
+              <div class="swiper-slide">
+                <img
+                      src="./images/gellery/gellery-img-3.png"
+                      alt="Наречена. Федір Кричевський"
+                      class="slideshow__picture"
+                    >
+              </div>
+              <div class="swiper-slide">
+                <img
+                      src="./images/gellery/gellery-img-4.png"
+                      alt="Наречена. Федір Кричевський"
+                      class="slideshow__picture"
+                    >
+              </div>
+              <div class="swiper-slide">
+                <img
+                      src="./images/gellery/gellery-img-5.png"
+                      alt="Наречена. Федір Кричевський"
+                      class="slideshow__picture"
+                    >
+              </div>
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- <div class="swiper-pagination"></div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-pagination"></div> -->
+          </div>
 
           <div class="gallery__pictures">
             <div class="gallery__slideshow slideshow">
@@ -487,5 +535,20 @@
 
       </div>
     </footer>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script>
+      var mySwiper = new Swiper('.swiper-container', {
+        // slidesPerView: 1,
+        pagination: {
+          el: '.swiper-pagination',
+          clickable: true,
+        },
+        navigation: {
+          nextEl: '.swiper-button-next',
+          prevEl: '.swiper-button-prev',
+        },
+      });
+    </script>
   </body>
 </html>
