--- a/src/index.html
+++ b/src/index.html
@@ -259,13 +259,6 @@
               </div>
               <div class="swiper-slide">
                 <img
-                      src="./images/gellery/gellery-img-4.png"
-                      alt="Наречена. Федір Кричевський"
-                      class="slideshow__picture"
-                    >
-              </div>
-              <div class="swiper-slide">
-                <img
                       src="./images/gellery/gellery-img-5.png"
                       alt="Наречена. Федір Кричевський"
                       class="slideshow__picture"
@@ -538,11 +531,12 @@
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
-      var mySwiper = new Swiper('.swiper-container', {
-        // slidesPerView: 1,
+      var mySwiper = new Swiper('.swiper', {
+        // slidesPerView: autofill,
         pagination: {
           el: '.swiper-pagination',
           clickable: true,
+          loop: true,
         },
         navigation: {
           nextEl: '.swiper-button-next',
