--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,384 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+
+    <title>Museum</title>
+    <link
+      rel="shortcut icon"
+      href="../src/icons/na-mu.svg"
+      type="image/x-icon"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="body">
+    <header class="header">
+
+      <aside class="burger-menu burger-menu__container" id="burger-menu">
+
+        <section class="burger-menu__box">
+
+          <a class="burger-menu__close" href="#">
+            <img
+              class="burger-menu__icon icon"
+              src="./icons/ri-close-fill.svg"
+              alt="close"
+            >
+          </a>
+
+          <nav class="menu" id="menu">
+            <lu class="menu__list">
+
+              <li class="menu__item">
+                <a class="menu__link" href="#gallery">Галерея</a>
+              </li>
+
+              <li class="menu__item">
+                <a class="menu__link" href="#exhibitions">Виставки та <br> події</a>
+              </li>
+
+              <li class="menu__item">
+                <a class="menu__link" href="#subscription">Про Нас</a>
+              </li>
+
+              <li class="menu__item">
+                <a class="menu__link" href="#footer">Контакти</a>
+              </li>
+            </lu>
+          </nav>
+        </section>
+
+        <hr class="burger-menu__line">
+
+        <section class="burger-menu__content work-week" id="work-week">
+
+          <div class="work-week__wrapper">
+            <h2 class="work-week__title">Графік роботи</h2>
+
+            <ul class="work-week__list">
+              <li
+                class="work-week__workday">
+                <span class="work-week__workday--hours">12:00 — 20:00</span>
+                <span class="work-week__workday--day">середа</span>
+              </li>
+
+              <li
+                class="work-week__workday">
+                <span class="work-week__workday--hours">12:00 — 20:00</span>
+                <span class="work-week__workday--day ">четвер</span>
+              </li>
+
+              <li
+                class="work-week__workday">
+                <span class="work-week__workday--hours">12:00 — 20:00</span>
+                <span class="work-week__workday--day">п’ятниця</span>
+              </li>
+
+              <li
+                class="work-week__workday">
+                <span class="work-week__workday--hours">11:00 — 19:00</span>
+                <span class="work-week__workday--day">субота</span>
+              </li>
+
+              <li
+                class="work-week__workday">
+                <span class="work-week__workday--hours">11:00 — 19:00</span>
+                <span class="work-week__workday--day">неділя</span>
+              </li>
+            </ul>
+          </div>
+
+          <p class="work-week__text">
+            <span class="work-week__workday--hours">Вихідні:</span>
+
+            <span class="work-week__workday--day">
+              понеділок,
+              <br>
+              вівторок
+              <br>
+              Каса припиняє роботу
+              <br>
+              за 1 годину до закриття музею
+            </span>
+          </p>
+
+        </section>
+
+        <div class="burger-menu__overlay"></div>
+
+      </aside>
+
+      <a class="header__burger-menu" href="#burger-menu">
+        <img
+          class="icon"
+          src="./icons/baseline-menu.svg"
+          alt="menu"
+        >
+      </a>
+
+      <div class="header__top">
+        <h1 class="header__logo">NA<br>MU</h1>
+      </div>
+
+      <section class="header__content">
+        <h1 class="header__tytle">Художній<br>музей</h1>
+
+        <a class="header__button" href="#">
+          <h2 class="header__button--tytle">Квитки</h2>
+        </a>
+
+        <h2 class="header__content--line">Події</h2>
+      </section>
+
+    </header>
+
+    <main class="main">
+
+      <section class="exhibitions" id="exhibitions">
+        <h1 class="exhibitions__title">Актуальні події</h1>
+
+        <section class="exhibitions__content">
+          <article class="exhibitions__relevence">
+
+            <div class="exhibitions__picture">
+              <img
+                class="exhibitions__img"
+                src="./images/picture/rectangle 2.4.png"
+                alt="picture"
+              >
+            </div>
+
+            <section class="exhibitions__description">
+              <h2 class="exhibitions__date">26.08-29.11.2019</h2>
+
+              <h1 class="exhibitions__subtitle">Йду і повертаюсь</h1>
+
+              <p class="exhibitions__text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </section>
+          </article>
+
+          <article class="exhibitions__relevence">
+            <div class="exhibitions__picture">
+              <img
+                class="exhibitions__img"
+                src="./images/picture/rectangle 4.4.png"
+                alt="picture"
+              >
+            </div>
+
+            <section class="exhibitions__description">
+
+              <h2 class="exhibitions__date">26.08-29.11.2019</h2>
+
+              <h1 class="exhibitions__subtitle">І спогади і мрії</h1>
+
+              <p class="exhibitions__text">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </section>
+          </article>
+        </section>
+
+        <article class="exhibitions__botton">
+
+          <div class="exhibitions__botton__block">
+
+            <h2 class="exhibitions__botton--date">26/08/2019 - 11:00</h2>
+
+            <h1 class="exhibitions__botton--subtitle">Від класицизму до романтизму</h1>
+          </div>
+        </article>
+      </section>
+
+      <section class="gallery gallery__container" id="gallery">
+
+        <h1 class="gallery__title">Галерея</h1>
+
+        <article class="gallery__slide">
+
+          <div class="gallery__pictures">
+
+            <div class="gallery__pictures--img">
+              <img
+              id="pic-1"
+              src="./images/gallery/rectangle-13.10.png"
+              alt="picture"
+              >
+            </div>
+
+            <div class="gallery__pictures--img">
+              <img
+                id="pic-2"
+                src="./images/gallery/rectangle-24.1.png"
+                alt="picture"
+              >
+
+            </div>
+
+            <div class="gallery__pictures--img">
+              <img
+                id="pic-3"
+                src="/images/gallery/rectangle-3.1.png"
+                alt="picture"
+              >
+            </div>
+
+            <div class="gallery__pictures--img">
+              <img
+                id="pic-4"
+                src="./images/gallery/rectangle-13.3.png"
+                alt="picture"
+              >
+            </div>
+
+            <div class="gallery__pictures--img">
+              <img
+                id="pic-5"
+                src="./images/gallery/rectangle-13.4.png"
+                alt="picture"
+              >
+            </div>
+          </div>
+
+          <section class="gallery__navigation">
+
+            <label class="gallery__navigation--switch">
+              <input
+              class="gallery__navigation--select"
+              type="radio"
+              name="slider"
+              id="switch-1"
+              checked
+              >
+              <span class="gallery__navigation--active"></span>
+            </label>
+
+            <label class="gallery__navigation--switch">
+              <input
+                class="gallery__navigation--select"
+                type="radio"
+                name="slider"
+                id="switch-2"
+                >
+              <span class="gallery__navigation--active"></span>
+            </label>
+
+            <label class="gallery__navigation--switch">
+              <input
+                class="gallery__navigation--select"
+                type="radio"
+                name="slider"
+                id="switch-3"
+              >
+              <span class="gallery__navigation--active"></span>
+            </label>
+
+            <label class="gallery__navigation--switch">
+              <input
+                class="gallery__navigation--select"
+                type="radio"
+                name="slider"
+                id="switch-4"
+              >
+              <span class="gallery__navigation--active"></span>
+            </label>
+
+            <label class="gallery__navigation--switch">
+              <input
+                class="gallery__navigation--select"
+                type="radio"
+                name="slider"
+                id="switch-5"
+              >
+              <span class="gallery__navigation--active"></span>
+            </label>
+          </section>
+        </article>
+      </section>
+
+      <section class="subscription subscription__container" id="subscription">
+
+        <div class="subscription__content">
+
+          <h1 class="subscription__title">Підписка</h1>
+
+          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+        </div>
+
+        <div class="subscription__input">
+
+          <input
+            class="subscription__input--input"
+            id="email"
+            type="email"
+            placeholder="E-mail"
+            required
+          >
+          <label class="subscription__input--label" for="email"></label>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer footer__container" id="footer">
+
+      <section class="footer__top">
+
+        <h1 class="footer__logo">NA<br>MU</h1>
+
+        <div class="footer__box">
+
+          <a href="https://www.facebook.com/" target="_blank">
+            <img
+              class="icon"
+              src="../src/icons/facebook-icon.svg"
+              alt="facebook"
+            >
+          </a>
+
+          <a href="https://www.instagram.com/" target="_blank">
+            <img
+              class="icon"
+              src="../src/icons/instagram-icon.svg"
+              alt="instagram"
+            >
+          </a>
+        </div>
+
+      </section>
+
+      <section class="footer__content">
+
+        <article class="footer__block-work-time" id="duplication-work-week"></article>
+
+        <article class="footer__block-contact-us">
+
+          <p class="footer__content--subtitle">Контакти:</p>
+
+          <p>
+            вул. М. Грушевського, 6; Київ, 01001
+            тел. +38 (044) 278-13-57
+            факс +38 (044) 278-74-54
+            e-mail: info@namu.kiev.ua
+          </p>
+
+        </article>
+      </section>
+
+      <a class="footer__botton" href="#">
+        <img
+          src="../src/icons/arrow-up.svg"
+          alt="button"
+        >
+      </a>
+
+      <hr class="footer__line">
+
+      <article class="footer__menu" id="duplication-menu"></article>
+
+    </footer>
   </body>
+  <script type="text/javascript" src="scripts/main.js"></script>
 </html>
